@@ -2,7 +2,7 @@
 
 package HTML::Widgets::NavMenu;
 
-our $VERSION = '0.4.0';
+our $VERSION = '0.5.0_00';
 
 package HTML::Widgets::NavMenu::Error;
 
