@@ -1,5 +1,7 @@
 Revision history for Perl extension Shlomif::NavMenu.
 
+    - no longer making use of the CGI.pm module.
+
 0.4.0     Thu Jan 20 16:49:15 IST 2005
     - Added the url_is_abs option to the nodes.
     - Many code cleanups.
